# rustagit

./: Cargo.toml  README.md
src/: main.rs  repository.rs  templates.rs
