[package]
name = "rustagit"
version = "0.1.0"
authors = ["Michał Sidor (Michcioperz) <public+git@meekchopp.es>"]
edition = "2018"
license = "MIT"

[dependencies]
git2 = { version = "0.13", default-features = false }
argh = { version = "0.1.3" }
anyhow = "1.0.32"
maud = "0.22.0"
thiserror = "1.0.20"
chrono = "0.4.15"
