[package]
name = "rustagit"
version = "0.1.0"
authors = ["Michał Sidor (Michcioperz) <public+git@meekchopp.es>"]
edition = "2018"
license = "MIT"

[dependencies]
git2 = { version = "0.13.10", default-features = false }
argh = "0.1.3"
anyhow = "1.0.32"
maud = "0.22.0"
thiserror = "1.0.20"
chrono = "0.4.15"
fs-err = "2.5.0"
humantime = "2.0.1"
